refactor pom.xml