@@ -12,6 +12,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.framework.version>3.2.1.RELEASE</spring.framework.version>
         <org.slf4j-version>1.6.6</org.slf4j-version>
     </properties>
@@ -41,6 +43,7 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <encoding>UTF-8</encoding>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <executable>c:/Program Files/Java/jdk1.7.0/bin/javac</executable>
@@ -59,6 +62,17 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+                <configuration>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+                        -Dfile.encoding=UTF-8
+                    </argLine>
                 </configuration>
             </plugin>
 
